
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int daenv ;
 int dasock ;
 int fflush (int ) ;
 int fwrite (int ,int,int,int ) ;
 int sprintf (int ,char*,int,int,int,int ,int ,char*,int,char*,int,int) ;

doenv (char *danam, char *daval)
{
  sprintf (daenv, "%c%c%c%c%c%s%c%s%c%c",

    255, 250, 39, 0, 0, danam, 1, daval, 255, 240);

  fwrite (daenv, 512, 1, dasock);
  fflush (dasock);
}
