; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/unix/remote/extr_21018.c_doenv.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/unix/remote/extr_21018.c_doenv.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@daenv = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [21 x i8] c"%c%c%c%c%c%s%c%s%c%c\00", align 1
@dasock = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @doenv(i8* %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  store i8* %0, i8** %4, align 8
  store i8* %1, i8** %5, align 8
  %6 = load i32, i32* @daenv, align 4
  %7 = load i8*, i8** %4, align 8
  %8 = load i8*, i8** %5, align 8
  %9 = call i32 @sprintf(i32 %6, i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str, i64 0, i64 0), i32 255, i32 250, i32 39, i32 0, i32 0, i8* %7, i32 1, i8* %8, i32 255, i32 240)
  %10 = load i32, i32* @daenv, align 4
  %11 = load i32, i32* @dasock, align 4
  %12 = call i32 @fwrite(i32 %10, i32 512, i32 1, i32 %11)
  %13 = load i32, i32* @dasock, align 4
  %14 = call i32 @fflush(i32 %13)
  %15 = load i32, i32* %3, align 4
  ret i32 %15
}

declare dso_local i32 @sprintf(i32, i8*, i32, i32, i32, i32, i32, i8*, i32, i8*, i32, i32) #1

declare dso_local i32 @fwrite(i32, i32, i32, i32) #1

declare dso_local i32 @fflush(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
